# dora-mcp-server

./: Dockerfile  Makefile  README.md  mcp_server.py  pyproject.toml
mcp_server/: mcp_server.py
