
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "dora-mcp-server"
version = "0.1.0"
description = "Minimal MCP server for DORA agents (FastAPI-based)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    {name = "cloudsteak"}
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.uv]
